Fix project grid overflow

--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ main {
 #announce-card,
 #trend-card,
 .proj-card {
-    border: 1px solid black
+    /* border: 1px solid black */
 }
 
 
@@ -187,52 +187,80 @@ main {
     flex: 2.3;
 }
 
-.projects > h3{
-    margin-bottom: 0.4rem;
+.projects h3 {
+    margin: .4rem 0 .6rem 0;
 }
 
 #proj-grid {
     display: grid;
+    height: 90%;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(4, auto);
     gap: 1rem;
-    ;
+    overflow-y: auto;
+    scrollbar-width: thin;
 }
+
 
 .proj-card {
     padding: 1rem;
     border-radius: .5rem;
-    /* box-shadow: -5px 0px 0px 0px red;  */
+    box-shadow: 2px 3px 0px 0px rgb(128, 128, 128, .1);
     border-left: 8px solid gold;
     background-color: var(--proj-card-bg);
-    
 }
 
-.card-options{
+.proj-card>h4 {
+    margin: 0;
+}
+
+.proj-card>p {
+    margin-top: 0;
+    overflow: hidden;
+}
+
+.card-options {
     display: flex;
     justify-content: right;
     gap: 1rem;
 }
 
-.card-opt-btn{
+.card-opt-btn {
     border: none;
     background-color: transparent;
-
-}
-
-
-.proj-card > h4{
-    margin: 0;
-}
-
-.proj-card > p{
-    margin-top: 0;
 }
 
 .main-side {
     padding: 1rem;
     flex: .7;
+    display: flex;
+    flex-direction: column;
 }
+
+.main-side h3 {
+    margin: .4rem 0 .6rem 0;
+}
+
+.announcements,
+.trending {
+    flex: 1;
+}
+
+#announce-card,
+#trend-card{
+    padding: 1rem;
+    border-radius: .5rem;
+    box-shadow: 2px 3px 0px 0px rgb(128, 128, 128, .1);
+    background-color: var(--proj-card-bg);
+}
+
+#trend-card{
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(4, auto);
+}
+
+
 
 
 /* footer{
